--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ input{
     }
     button{
         margin: auto;
-        margin-top: 10px;
+        margin-top: 10px !important;
         display: block;
         background-color: black;
         color: rgb(255, 255, 255);
@@ -88,7 +88,7 @@ input{
     }
     button{
         margin: auto;
-        /* margin-top: 5px !important; */
+        margin-top: 10px !important;
         display: block;
         background-color: black;
         color: rgb(255, 255, 255);
@@ -120,14 +120,14 @@ input{
     }
     button{
         margin: auto;
-        margin-top: 10px;
         display: block;
+        margin-top: 10% !important; 
         background-color: black;
         color: rgb(255, 255, 255);
         /* transform: rotate(45deg); */
     }
     img{
-        margin-top: 30% !important; 
+        margin-top: 30% !important;
         margin: auto;
         display: block;
         width: 400px;
